Nautilus crashes after taking a screenshot to clipboard
I have the following custom shortcut for taking a screenshot to clipboard:
Key combination:
Ctrl + Print
Command:
sh -c "gnome-screenshot --file=/tmp/ss.png; xclip -selection clipboard -t image/png -i /tmp/ss.png"
Affected version
- Nightly flatpak: Yes
- Other: GNOME nautilus 43.0 on Debian testing
Steps to reproduce
- Open Nautilus.
- Press Ctrl + Print.
Current behavior
Nautilus crashes, with the following error on terminal:
**
ERROR:../src/nautilus-file.c:610:nautilus_file_new_from_filename: assertion failed: (filename[0] != '\0')
Bail out! ERROR:../src/nautilus-file.c:610:nautilus_file_new_from_filename: assertion failed: (filename[0] != '\0')
Aborted
Attempting to open Nautilus again results in the same crash for some time.
Edit: Crashes until I have text in my clipboard.*
Expected behavior
Nautilus should not crash.
Additional information
Stack trace: https://gitlab.gnome.org/-/snippets/4251
Edited by Siddh Raman Pant